--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ h1 {
     align-items: flex-start;
     gap: 40px; 
     margin-top: 20px;
+    flex-wrap: wrap;
 }
 
 .card {
@@ -74,6 +75,7 @@ h1 {
     flex-direction: column;
     align-items: center;
     gap: 15px; 
+    flex: 1 1 300px;
 }
 
 .card img {
